# shorts-maker

./: .gitignore  extract_frames.py  make_contact_sheet.py  make_image_shorts.py  make_shorts.py  preset_sample.txt  pyproject.toml
shortmaker/: __init__.py  cli.py  clip.py  color.py  contact.py  detect.py  ffmpeg.py  files.py  frames.py  highlight.py  image.py  main.py  overlay.py  probe.py  score.py  sharp.py  ytbgm.py
